Fix scrollbar (#262)

--- a/src/main/webapp/app/shared/input-components/typeahead/typeahead-multiselect/typeahead-multiselect.component.scss
+++ b/src/main/webapp/app/shared/input-components/typeahead/typeahead-multiselect/typeahead-multiselect.component.scss
@@ -3,7 +3,7 @@
 .typeahead-multiselect {
     width: 100%;
 
-    overflow-y: scroll;
+    overflow-y: visible;
     max-height: 4rem;
 
     .typeahead-multiselect__tag {
